about me designed

--- a/common_style.css
+++ b/common_style.css
@@ -32,7 +32,31 @@
 }
 
 .navbar-brand:hover {
-    color: #0d6efd !important;
+    color: #377be1 !important;
+}
+
+.navbar .container-fluid {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.navbar-nav-wrapper{
+  display: flex;
+}
+
+.navbar-nav{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.navbar-nav .nav-item{
+  display: inline-block;
 }
 
 /* Hero section gradient background */
@@ -105,8 +129,8 @@
 }
 
 .row > article:nth-child(3) .card-body {
-  background: linear-gradient(135deg, #43e97b 0%, #38f9d7 100%);
-  color: #fff;
+  background: linear-gradient(135deg, #ff9a9e 0%, #fbc2eb 100%);
+  color: #f3e9e9;
   border-radius: 0.75rem;
 }
 
