--- a/common_style.css
+++ b/common_style.css
@@ -142,6 +142,7 @@
   outline-offset: 3px;
 }
 #footer-contact a{
+  color: #ffff;
   text-decoration: underline;
 }
 
@@ -203,8 +204,8 @@ code {
     background-color: #f8f9fa;
     padding: 2px 6px;
     border-radius: 3px;
-    color: #d63384;
-    font-family: 'Courier New', monospace;
+    color: #240615;
+    font-family: 'Times New Roman', monospace;
 }
 
 /* Table styling */
@@ -367,6 +368,7 @@ dd {
   transform: scale(1.15);
 }
 .word-animation {
+  color: #2c3e50;
   display: inline-block;
   animation: breathe 3s ease-in-out infinite;
 }
@@ -375,11 +377,11 @@ dd {
 @keyframes breathe {
   0%, 100% {
     transform: translateY(0);
-    color: #198754;
+    color: #0a0d0c;
   }
   50% {
     transform: translateY(-6px);
-    color: #20c997;
+    color: #044230;
   }
 }
 
@@ -432,7 +434,7 @@ dd {
 .gallery-img {
     width: 100%;
     height: 200px;
-    object-fit: contain;
+    object-fit: cover;
     display: block;
     border-radius: 10px 10px 0 0;
     transition: transform 0.3s ease;
